# learn_pg

./: .dockerignore  .dockerignore.bak  .env.example  .env.production  .gitignore  CLAUDE.md  FAQ.md  README.md  apply.md  design.md  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml  docker-daemon.json.example  index.html  need.md  plan.md  progress.md  task_plan.md
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.dev  go.mod  go.sum
backend/data/: workspace_projects.json
collector/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  build-ebpf.sh
collector/include/bpf/: bpf_endian.h  bpf_helper_defs.h  bpf_helpers.h  bpf_tracing.h  common.h
collector/probes/: probe.bpf.c
collector/src/: ebpf.rs  main.rs  wal_file.rs
collector/src/probe/: mod.rs
collector/xtask/src/: main.rs
deploy/: .env.example  Makefile  docker-compose.yml
deploy/backend/: .env.example  docker-compose.yml
deploy/cloud/: .env.example  docker-compose.yml
deploy/collector/: .env.example  (+1 more)
docs/: FAQ.md  README.md  apply.md  deploy.md  design.md  findings.md  impl-plan.md  manual-deploy.md  need.md  ops.md  plan.md  planning.md  user-manual.md
e2e/: package.json  playwright.config.ts  pnpm-lock.yaml
frontend/: .env.example  Dockerfile  Dockerfile.dev  Dockerfile.e2e  index.html  nginx.conf  nginx.e2e.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
scripts/: dev-smoke.sh  docker-compose.prod-smoke.yml  docker-compose.smoke.yml  prod-smoke.sh
src-tauri/: Cargo.toml  tauri.conf.json
(+152 files in other folders)
