[package]
name = "pg-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = "0.21"
futures-util = "0.3"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1